--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "so-eat",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,138 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "@hello-pangea/dnd": "^18.0.1",
+    "@mona-health/react-input-mask": "^3.0.3",
+    "@omtanke/react-use-event-outside": "^1.0.1",
+    "@popperjs/core": "^2.11.8",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.3.0",
+    "@reactour/tour": "^3.8.0",
+    "@t3-oss/env-nextjs": "^0.13.8",
+    "@types/three": "^0.180.0",
+    "@vercel/otel": "^1.13.1",
+    "animate.css": "^4.1.1",
+    "apexcharts": "^4.5.0",
+    "bootstrap": "^5.3.8",
+    "class-variance-authority": "^0.7.1",
+    "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.18",
+    "formik": "^2.4.6",
+    "framer-motion": "^12.23.24",
+    "globals": "^16.4.0",
+    "i18next": "^24.2.3",
+    "jsx-to-string": "^1.4.0",
+    "lucide-react": "^0.545.0",
+    "next": "^15.5.4",
+    "next-i18next": "^15.4.2",
+    "next-images": "^1.8.5",
+    "pascalcase": "^2.0.0",
+    "payment": "^2.4.7",
+    "react": "^19.0.0",
+    "react-apexcharts": "^1.7.0",
+    "react-big-calendar": "^1.19.4",
+    "react-credit-cards-2": "^2.0.0-rc1",
+    "react-date-range": "^2.0.1",
+    "react-dom": "^19.0.0",
+    "react-i18next": "^15.7.4",
+    "react-jss": "^10.10.0",
+    "react-number-format": "^5.4.4",
+    "react-popper": "^2.3.0",
+    "react-scrollspy": "^3.4.3",
+    "react-syntax-highlighter": "^15.6.6",
+    "react-toastify": "^11.0.5",
+    "react-use": "^17.6.0",
+    "sass": "^1.93.2",
+    "simplex-noise": "^4.0.3",
+    "tailwind-merge": "^3.3.1",
+    "three": "^0.180.0",
+    "use-clipboard-copy": "^0.2.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.4",
-    "@eslint/eslintrc": "^3"
+    "@chromatic-com/storybook": "^4.1.1",
+    "@eslint/compat": "^1.4.0",
+    "@eslint/eslintrc": "^3",
+    "@eslint/js": "^9.37.0",
+    "@next/eslint-plugin-next": "^15.5.4",
+    "@playwright/test": "^1.56.0",
+    "@storybook/addon-a11y": "^9.1.10",
+    "@storybook/addon-docs": "^9.1.10",
+    "@storybook/addon-onboarding": "^9.1.10",
+    "@storybook/addon-themes": "^9.1.10",
+    "@storybook/addon-vitest": "^9.1.10",
+    "@storybook/nextjs-vite": "^9.1.10",
+    "@storybook/react": "^9.1.10",
+    "@svgr/cli": "^8.1.0",
+    "@tailwindcss/postcss": "^4.1.14",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/node": "^22.13.10",
+    "@types/pascalcase": "^1.0.3",
+    "@types/payment": "^2.1.7",
+    "@types/prismjs": "^1.26.5",
+    "@types/react": "^19.0.12",
+    "@types/react-big-calendar": "^1.16.3",
+    "@types/react-date-range": "^1.4.10",
+    "@types/react-dom": "^19.0.4",
+    "@types/react-input-mask": "^3.0.6",
+    "@types/react-scrollspy": "^3.3.9",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/react-transition-group": "^4.4.12",
+    "@typescript-eslint/eslint-plugin": "^8.46.0",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.22.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-config-next": "^15.2.3",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-storybook": "^9.1.10",
+    "jsdom": "^27.0.0",
+    "madge": "^8.0.0",
+    "next-intercept-stdout": "^1.0.1",
+    "playwright": "^1.56.0",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "prismjs": "^1.30.0",
+    "react-transition-group": "^4.4.5",
+    "semantic-release": "^24.2.9",
+    "storybook": "^9.1.10",
+    "stylelint": "^16.25.0",
+    "stylelint-config-prettier-scss": "^1.0.0",
+    "stylelint-config-standard": "^37.0.0",
+    "stylelint-config-standard-scss": "^14.0.0",
+    "stylelint-config-twbs-bootstrap": "^16.1.0",
+    "stylelint-declaration-block-no-ignored-properties": "^2.8.0",
+    "stylelint-declaration-strict-value": "^1.10.11",
+    "stylelint-no-px": "^2.1.0",
+    "stylelint-order": "^6.0.4",
+    "stylelint-prettier": "^5.0.3",
+    "stylelint-scss": "^6.12.1",
+    "tailwindcss": "^4.1.14",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.46.0",
+    "vite": "^7.1.9",
+    "vitest": "^3.2.4"
+  },
+  "resolutions": {
+    "json5": ">=2.2.2",
+    "ua-parser-js": ">=0.7.33"
+  },
+  "overrides": {
+    "json5": ">=2.2.2",
+    "ua-parser-js": ">=0.7.33"
   }
 }
