--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postinstall": "node -e \"try{require('lightningcss');console.log('lightningcss ok')}catch(e){console.log('Rebuilding lightningcss from source…');require('child_process').execSync('npm rebuild lightningcss --build-from-source', {stdio:'inherit'})}\""
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
@@ -65,6 +66,7 @@
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.37.0",
     "@next/eslint-plugin-next": "^15.5.4",
+    "lightningcss": "^1.27.0",
     "@playwright/test": "^1.56.0",
     "@storybook/addon-a11y": "^9.1.10",
     "@storybook/addon-docs": "^9.1.10",
