--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "formik": "^2.4.6",
     "framer-motion": "^12.23.24",
     "globals": "^16.4.0",
+    "google-protobuf": "^4.0.0",
+    "grpc-web": "^2.0.2",
     "i18next": "^24.2.3",
     "jsx-to-string": "^1.4.0",
     "lucide-react": "^0.545.0",
@@ -66,7 +68,6 @@
     "@eslint/eslintrc": "^3",
     "@eslint/js": "^9.37.0",
     "@next/eslint-plugin-next": "^15.5.4",
-    "lightningcss": "^1.27.0",
     "@playwright/test": "^1.56.0",
     "@storybook/addon-a11y": "^9.1.10",
     "@storybook/addon-docs": "^9.1.10",
@@ -79,6 +80,7 @@
     "@tailwindcss/postcss": "^4.1.14",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
+    "@types/google-protobuf": "^3.15.12",
     "@types/node": "^22.13.10",
     "@types/pascalcase": "^1.0.3",
     "@types/payment": "^2.1.7",
@@ -106,6 +108,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-storybook": "^9.1.10",
     "jsdom": "^27.0.0",
+    "lightningcss": "^1.27.0",
     "madge": "^8.0.0",
     "next-intercept-stdout": "^1.0.1",
     "playwright": "^1.56.0",
