--- a/packages/my-saas-components/package.json
+++ b/packages/my-saas-components/package.json
@@ -67,6 +67,7 @@
   },
   "peerDependencies": {
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "next": ">=14.0.0"
   }
 }
