feat(business): integrate TomTom Maps for location selection in step 2
- Added `@tomtom-international/web-sdk-maps` for interactive map functionality.
- Created `TomTomMapPicker` component for map rendering, address search, and marker placement.
- Updated step 2 page to utilize `TomTomMapPicker`, allowing users to select and confirm their location.
- Enhanced form state management to include formatted address from map interactions.
- Updated localization files for search address placeholder text.
- Documented integration details in `TOMTOM_MAPS_INTEGRATION.md`.

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-three/fiber": "^9.3.0",
     "@reactour/tour": "^3.8.0",
     "@t3-oss/env-nextjs": "^0.13.8",
+    "@tomtom-international/web-sdk-maps": "^6.25.0",
     "@types/three": "^0.180.0",
     "@vercel/otel": "^1.13.1",
     "animate.css": "^4.1.1",
