--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -15,6 +15,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Prepare server directory
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.PROD_HOST }}
+          username: ${{ secrets.PROD_USER }}
+          key: ${{ secrets.PROD_SSH_KEY }}
+          port: ${{ secrets.PROD_PORT || 22 }}
+          script: |
+            mkdir -p /opt/so-eat
+            cd /opt/so-eat
+            rm -rf *
+            
       - name: Copy files to server
         uses: appleboy/scp-action@v0.1.7
         with:
@@ -24,7 +36,7 @@ jobs:
           port: ${{ secrets.PROD_PORT || 22 }}
           source: ".,!node_modules,!.git,!.next"
           target: "/opt/so-eat"
-          rm: true
+          rm: false
 
       - name: Deploy with Docker Compose
         uses: appleboy/ssh-action@v1.0.3
