--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -23,14 +23,14 @@ jobs:
           key: ${{ secrets.PROD_SSH_KEY }}
           port: ${{ secrets.PROD_PORT || 22 }}
           script: |
-            mkdir -p /opt/so-eat
+            mkdir -p ~/client
             
       - name: Copy files to server
         uses: burnett01/rsync-deployments@7.0.1
         with:
           switches: -avzr --delete --exclude=node_modules --exclude=.git --exclude=.next --exclude=.github
           path: ./
-          remote_path: /opt/so-eat/
+          remote_path: ~/client/
           remote_host: ${{ secrets.PROD_HOST }}
           remote_user: ${{ secrets.PROD_USER }}
           remote_key: ${{ secrets.PROD_SSH_KEY }}
@@ -44,7 +44,7 @@ jobs:
           key: ${{ secrets.PROD_SSH_KEY }}
           port: ${{ secrets.PROD_PORT || 22 }}
           script: |
-            cd /opt/so-eat
+            cd ~/client
             docker-compose down
             docker-compose build
             docker-compose up -d
