--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -26,8 +26,10 @@ jobs:
             mkdir -p ~/client
             sudo apt update && sudo apt install -y rsync
             cd ~/client
-            # Create .env file from GitHub secret
-            echo "${{ secrets.PROD_ENV_VARS }}" > .env
+            # Create .env file from GitHub secret with default values
+            echo "NODE_ENV=production" > .env
+            echo "PORT=3000" >> .env
+            echo "${{ secrets.PROD_ENV_VARS }}" >> .env
             
       - name: Copy files to server
         uses: burnett01/rsync-deployments@7.0.1
