--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -26,9 +26,9 @@ jobs:
             mkdir -p ~/client
             sudo apt update && sudo apt install -y rsync
             cd ~/client
-            # Create .env file from GitHub secret with default values
-            echo "NODE_ENV=production" > .env
-            echo "PORT=3000" >> .env
+            # Create .env file from GitHub secret with fallback values
+            echo "NODE_ENV=${{ secrets.PROD_ENV_VARS || 'production' }}" > .env
+            echo "PORT=${{ secrets.PROD_PORT || '3000' }}" >> .env
             echo "${{ secrets.PROD_ENV_VARS }}" >> .env
             
       - name: Copy files to server
