--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: so-eat-web
+    container_name: business
     restart: unless-stopped
     ports:
       - "3500:3000"
@@ -13,7 +13,7 @@ services:
     env_file:
       - .env
     networks:
-      - so-eat-network
+      - business-network
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000"]
       interval: 30s
@@ -27,5 +27,5 @@ services:
         max-file: "3"
 
 networks:
-  so-eat-network:
+  business-network:
     driver: bridge
