--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           switches: -avzr --delete --exclude=node_modules --exclude=.git --exclude=.next --exclude=.github --exclude=.env
           path: ./
-          remote_path: ~/client/
+          remote_path: ~/business/
           remote_host: ${{ secrets.PROD_HOST }}
           remote_user: ${{ secrets.PROD_USER }}
           remote_key: ${{ secrets.PROD_SSH_KEY }}
@@ -34,7 +34,7 @@ jobs:
           key: ${{ secrets.PROD_SSH_KEY }}
           port: 22
           script: |
-            cd ~/client
+            cd ~/business
             echo "NODE_ENV=${{ secrets.NODE_ENV }}" > .env
             echo "PORT=${{ secrets.PORT }}" >> .env
             docker compose down
